SERVER-38094 Add write concern that waits for majority commit point but not committed snapshot